--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@swimlane/ngx-datatable": "^15.0.2",
-    "angular-bootstrap-md": "^8.2.0",
+    "angular-bootstrap-md": "^6.1.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng-drag-drop": "^5.0.0",
     "rxjs": "^6.3.3",
