--- a/package.json
+++ b/package.json
@@ -18,19 +18,28 @@
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
-    "@angular/material": "^6.2.1",
+    "@angular/material": "6.0.1",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "1.1.0",
     "@swimlane/ngx-datatable": "^15.0.2",
+    "@ngui/map": "0.18.3",
+    "@types/googlemaps": "3.26.14",
     "angular-bootstrap-md": "^6.1.1",
-    "bootstrap": "3.3.5",
+    "arrive": "2.3.1",
+    "bootstrap": "3.4.1",
+    "bootstrap-notify": "3.1.3",
     "chart.js": "^2.5.0",
+    "chartist": "0.9.4",
     "core-js": "^2.5.4",
+    "flexboxgrid": "6.3.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "moment": "2.18.1",
     "ng-drag-drop": "^5.0.0",
+    "ng-sidebar": "7.0.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.5.2",
     "zone.js": "^0.8.26"
